[package]
name = "rsclp"
version = "0.1.1"
edition = "2021"
description = "A lib crate to parse proccess arguments"
repository = "https://github.com/fstafforte/rsclp"
license = "Apache-2.0"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
